Deependencias no utilizadas y refactor